--- a/monitorador_de_webservices_bancarios_backend/package.json
+++ b/monitorador_de_webservices_bancarios_backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.21.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4"
@@ -20,6 +21,7 @@
     "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
+    "@types/node-cron": "^3.0.11",
     "@types/sequelize": "^4.28.20",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
