--- a/monitorador_de_webservices_bancarios_backend/package.json
+++ b/monitorador_de_webservices_bancarios_backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "express": "^4.21.1",
     "node-cron": "^3.0.3",
     "pg": "^8.13.0",
