--- a/front/package.json
+++ b/front/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "front",
+  "name": "juntando",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@search-params/react": "^0.0.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
+    "routes": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
